trying to fix footer to bottom on iphone

--- a/main.css
+++ b/main.css
@@ -152,7 +152,7 @@ footer {
   justify-content: center;
   align-items: center;
   /* height: 100%; */
-  background-color: azure;
+  background-color: rgb(76, 168, 168);
 }
 
 /* .hills-pattern {
